updated the exemption page at the end

--- a/app/views/lis/3/part-help.html
+++ b/app/views/lis/3/part-help.html
@@ -37,7 +37,6 @@
   
   <h2 class="heading-medium">Your entitlement</h2>
   <ul>
-    <li>Your certificate does not entitle you to free NHS prescriptions.</li>
     <li>We have worked out that you will need to pay the following towards your health costs:</li>
   </ul>
   <!--
@@ -71,14 +70,18 @@
    -->
 
   <ul class="cert-description">
+    <li class="large">Prescriptions</li>
+    <li>You are not entitled to free NHS prescriptions</li>
+  </ul>
+  <ul class="cert-description">
     <li class="large">Sight tests</li>
     <li>you pay a maximum of:</li>
-    <li class="cost">£35.72</li>
+    <li class="cost">£5</li>
   </ul>
   <ul class="cert-description">
     <li class="large">Glasses or contact lenses</li>
     <li>you pay: </li>
-    <li class="cost">£71.44</li> 
+    <li class="cost">£10</li> 
     <li>
       towards an optical voucher
       <details>
@@ -89,13 +92,13 @@
             The value of your voucher depends on your prescription.</p>
           <p>
             Ask the person who tests your sight what the value of the voucher is for your prescription.
-            <br>Your voucher will be reduced by £71.44.
+            <br>Your voucher will be reduced by £10.
           </p>
           <p>
             For example:<br>
             Cost of glasses = £100<br>
-            Value of voucher = £90<br>
-            You would pay £81.44 because the glasses cost £10 more than the voucher.
+            Value of voucher = £59.30<br>
+            You would pay £50.70.
           </p>
         </div>
       </details>
@@ -104,13 +107,13 @@
   <ul class="cert-description">
     <li class="large">Travel to receive NHS treatment</li>
     <li>you pay: </li>
-    <li class="cost">£35.16</li> 
+    <li class="cost">£5</li> 
     <li>in any one week</li>
   </ul>
   <ul class="cert-description">
     <li class="large">NHS dental treatment, wigs, or fabric supports</li>
     <li>you pay a maximum of:</li>
-    <li class="cost">£107.16</li> 
+    <li class="cost">£15</li> 
     <li>per course of treatment or prescribed item</li>
   </ul>
  
