changed pension state to properties of the applicant, fixed but where user must select a type of pension to continue

--- a/app/views/lis/3/you/about-you-summary.html
+++ b/app/views/lis/3/you/about-you-summary.html
@@ -21,7 +21,7 @@
     <table class="data-table you-summary">
       <tr>
         <td>Your name</td>
-        <td>Miriam Smith</td>
+        <td>{{applicantFullName}}</td>
         <td><a href="registration">Change this</a></td>
       </tr>
       <tr>
