--- a/app/views/lis/3/partner/partner.html
+++ b/app/views/lis/3/partner/partner.html
@@ -23,14 +23,14 @@
         <fieldset>
           <div class="inline-form-groups">
             <div class="form-group">
-              <input type="radio" id="binary-yes" name="partner" value="yes">
-              <label class="form-control-radio" for="binary-yes">
+              <input type="radio" id="yes" name="partner" value="yes">
+              <label class="form-control-radio" for="yes">
                 Yes
               </label>
             </div>
             <div class="form-group">
-              <input type="radio" id="binary-no" name="partner" value="no">
-              <label class="form-control-radio" for="binary-no">
+              <input type="radio" id="no" name="partner" value="no">
+              <label class="form-control-radio" for="no">
                 No
               </label>
             </div>
