--- a/app/views/lis/3/partner/summary.html
+++ b/app/views/lis/3/partner/summary.html
@@ -14,7 +14,6 @@
 
   <div class="text">
   
-
     <h1 class="heading-large">
       Check your details
     </h1>
@@ -22,7 +21,7 @@
     <table class="data-table">
       <tr>
         <td>Do you have a partner?</td>
-        <td>No</td>
+        <td>{{applicantPartner}}</td>
         <td><a href="partner">Change this</a></td>
       </tr>
     </table>
