adding partner screens

--- a/app/views/lis/3/you/about-you-summary.html
+++ b/app/views/lis/3/you/about-you-summary.html
@@ -21,7 +21,7 @@
     <table class="data-table you-summary">
       <tr>
         <td>Your name</td>
-        <td>Miriam Smith</td>
+        <td>Vinay Mattu</td>
         <td><a href="registration">Change this</a></td>
       </tr>
       <tr>
@@ -31,7 +31,7 @@
       </tr>
       <tr>
         <td>Email address</td>
-        <td>m.smith@inter.net</td>
+        <td>v.mattu@inter.net</td>
         <td><a href="contact">Change this</a></td>
       </tr>
       <tr>
