consolidated applicants benefits

--- a/app/views/lis/3/you/registration.html
+++ b/app/views/lis/3/you/registration.html
@@ -29,7 +29,7 @@
 
     {{
       form_macros.text_field({
-        id: 'last-name',
+        id: 'lastname',
         label: 'Last name'
       })
     }}
