fixed bugs in routes.js

--- a/app/views/lis/3/partner/benefits/benefit-sprint3.html
+++ b/app/views/lis/3/partner/benefits/benefit-sprint3.html
@@ -13,59 +13,59 @@
     <div class="column-two-thirds">
 
   <h1 class="heading-large">
-      Do you receive any of the following?
+      Does your partner receive any of the following?
   </h1>
   <p>Tick all that apply</p>
 
   <form action="sprint3-benefit-handler" method="get" class="form">
     <div class="form-item-wrapper">
       <div class="form-group">
-        <input type="checkbox" id="af" value="af" name="sprint3benefits">
+        <input type="checkbox" id="af" value="af" name="sprint3partnerbenefits">
         <label class="form-control-checkbox" for="af">
           Armed forces independence payment 
         </label>
       </div>
       <div class="form-group">
-        <input type="checkbox" id="aa" value="aa" name="sprint3benefits">
+        <input type="checkbox" id="aa" value="aa" name="sprint3partnerbenefits">
         <label class="form-control-checkbox" for="aa">
           Attendance allowance
         </label>
       </div>
       <div class="form-group">
-        <input type="checkbox" id="ca" value="ca" name="sprint3benefits">
+        <input type="checkbox" id="ca" value="ca" name="sprint3partnerbenefits">
         <label class="form-control-checkbox" for="ca">
           Carers allowance
         </label>
       </div> 
       <div class="form-group">
-        <input type="checkbox" id="ctc" value="ctc" name="sprint3benefits">
+        <input type="checkbox" id="ctc" value="ctc" name="sprint3partnerbenefits">
         <label class="form-control-checkbox" for="ctc">
          Child tax credits
         </label>
       </div>
       <div class="form-group">
-        <input type="checkbox" id="dla" value="dla" name="sprint3benefits">
+        <input type="checkbox" id="dla" value="dla" name="sprint3partnerbenefits">
         <label class="form-control-checkbox" for="dla">
           Disability living allowance
         </label>
       </div>
       <div class="form-group">
-        <input type="checkbox" id="iid" value="iid" name="sprint3benefits">
+        <input type="checkbox" id="iid" value="iid" name="sprint3partnerbenefits">
         <label class="form-control-checkbox" for="iid">
           Industrial injuries disablement benefit
         </label>
       </div>
       <div class="form-group">
-        <input type="checkbox" id="mp" value="mp" name="sprint3benefits">
+        <input type="checkbox" id="mp" value="mp" name="sprint3partnerbenefits">
         <label class="form-control-checkbox" for="mp">
          Maintenance payments
         </label>
       </div>
       <p class="form-block">or</p>
       <div class="form-group">
-        <input type="checkbox" id="none" value="none" name="sprint3benefits">
+        <input type="checkbox" id="none" value="none" name="sprint3partnerbenefits">
         <label class="form-control-checkbox" for="none">
-          I don't receive any of these
+          They don't receive any of these
         </label>
       </div>
     </div>
