--- a/app/views/lis/3/partner/education.html
+++ b/app/views/lis/3/partner/education.html
@@ -39,7 +39,8 @@
 
           {{
             form_macros.button({
-              label: 'Next'
+              label: 'Next',
+              href: 'pension/pension'
             })
           }}
 
