--- a/app/views/lis/3/partner/work.html
+++ b/app/views/lis/3/partner/work.html
@@ -38,7 +38,8 @@
 
         {{
           form_macros.button({
-            label: 'Next'
+            label: 'Next',
+            href: 'pension/pension'
           })
         }}
 
