moving logo to right side of header

--- a/app/assets/sass/modules/nhs-template.scss
+++ b/app/assets/sass/modules/nhs-template.scss
@@ -23,7 +23,7 @@ body {
 
   a.header-logo {
     display: block;
-    float: left;
+    float: right;
     width: 90px;
     height: 36px;
     margin: 15px 0 15px 0;
