--- a/public/stylesheets/nhs_application.css
+++ b/public/stylesheets/nhs_application.css
@@ -1433,7 +1433,7 @@ body {
         padding: 0 30px; } }
   #global-header a.header-logo {
     display: block;
-    float: left;
+    float: right;
     width: 90px;
     height: 36px;
     margin: 15px 0 15px 0; }
