updated the routes to include the partner object

--- a/app/views/sprint3.html
+++ b/app/views/sprint3.html
@@ -34,7 +34,7 @@
   
       <ul>
         <li><span class="strong">What we found:</span> </li>
-        <li>On the <a href="lis/3/part-help">done screen</a> customers want the information about eye care help to be as to the point as the other types of help.</li>
+        <li>On the <a href="lis/3/part-help">done screen</a> customers want the information about eye care help to be to the point like the explanations for other types of help.</li>
         <li>We tested some pages with a blind user using the JAWS screen reader, the mark up was quite good with some issues. The user liked the short to the point pages and was able to answer the questions presented to her.</li>
       </ul>
   
