--- a/app/views/lis/3/partner/benefits/aa.html
+++ b/app/views/lis/3/partner/benefits/aa.html
@@ -12,12 +12,12 @@
   <div class="grid-row">
     <div class="column-two-thirds">
   <h1 class="heading-large">
-        Does your partner receive the mobility component of disability living allowance?
+    AA Do you receive the ... AA
   </h1>
 
   <!-- <p class="navigation"><a class="back-to-previous">Back</a></p> -->
       
-  <form action="" method="get" class="form">
+  <form action="attendance-allowance-handler" method="get" class="form">
 <div class="form-item-wrapper">
       <fieldset>
         <div class="inline-form-groups">
@@ -37,7 +37,7 @@
 
         <div class="js-hidden panel-indent" id="contact-email-address">
           <label class="form-label-bold" for="email-address">
-            Which rate do they receive?
+            Which rate do you receive?
           </label>
           <br>
           <div class="form-group">
@@ -65,8 +65,7 @@
 
     {{
       form_macros.button({
-        label: 'Next',
-        href: 'benefit7' 
+        label: 'Next'
       })
     }}
     
