--- a/app/views/lis/3/partner/benefits/benefit-sprint3.html
+++ b/app/views/lis/3/partner/benefits/benefit-sprint3.html
@@ -17,55 +17,55 @@
   </h1>
   <p>Tick all that apply</p>
 
-  <form action="sprint3-benefit-handler" method="get" class="form">
+  <form action="sprint3-partner-benefit-handler" method="get" class="form">
     <div class="form-item-wrapper">
       <div class="form-group">
-        <input type="checkbox" id="af" value="af" name="sprint3partnerbenefits">
+        <input type="checkbox" id="af" value="af" name="sprint3benefits">
         <label class="form-control-checkbox" for="af">
           Armed forces independence payment 
         </label>
       </div>
       <div class="form-group">
-        <input type="checkbox" id="aa" value="aa" name="sprint3partnerbenefits">
+        <input type="checkbox" id="aa" value="aa" name="sprint3benefits">
         <label class="form-control-checkbox" for="aa">
           Attendance allowance
         </label>
       </div>
       <div class="form-group">
-        <input type="checkbox" id="ca" value="ca" name="sprint3partnerbenefits">
+        <input type="checkbox" id="ca" value="ca" name="sprint3benefits">
         <label class="form-control-checkbox" for="ca">
           Carers allowance
         </label>
       </div> 
       <div class="form-group">
-        <input type="checkbox" id="ctc" value="ctc" name="sprint3partnerbenefits">
+        <input type="checkbox" id="ctc" value="ctc" name="sprint3benefits">
         <label class="form-control-checkbox" for="ctc">
          Child tax credits
         </label>
       </div>
       <div class="form-group">
-        <input type="checkbox" id="dla" value="dla" name="sprint3partnerbenefits">
+        <input type="checkbox" id="dla" value="dla" name="sprint3benefits">
         <label class="form-control-checkbox" for="dla">
           Disability living allowance
         </label>
       </div>
       <div class="form-group">
-        <input type="checkbox" id="iid" value="iid" name="sprint3partnerbenefits">
+        <input type="checkbox" id="iid" value="iid" name="sprint3benefits">
         <label class="form-control-checkbox" for="iid">
           Industrial injuries disablement benefit
         </label>
       </div>
       <div class="form-group">
-        <input type="checkbox" id="mp" value="mp" name="sprint3partnerbenefits">
+        <input type="checkbox" id="mp" value="mp" name="sprint3benefits">
         <label class="form-control-checkbox" for="mp">
          Maintenance payments
         </label>
       </div>
       <p class="form-block">or</p>
       <div class="form-group">
-        <input type="checkbox" id="none" value="none" name="sprint3partnerbenefits">
+        <input type="checkbox" id="none" value="none" name="sprint3benefits">
         <label class="form-control-checkbox" for="none">
-          They don't receive any of these
+          I don't receive any of these
         </label>
       </div>
     </div>
