--- a/app/views/lis/3/partner/benefits/aa.html
+++ b/app/views/lis/3/partner/benefits/aa.html
@@ -12,44 +12,18 @@
   <div class="grid-row">
     <div class="column-two-thirds">
   <h1 class="heading-large">
-    AA Do you receive the ... AA
+    Whitch rate of attendance allowance do you receive?
   </h1>
 
   <!-- <p class="navigation"><a class="back-to-previous">Back</a></p> -->
       
   <form action="attendance-allowance-handler" method="get" class="form">
-<div class="form-item-wrapper">
+    <div class="form-item-wrapper">
       <fieldset>
-        <div class="inline-form-groups">
-          <div class="form-group">
-            <input type="radio" id="email" name="contact">
-            <label class="form-control-radio js-toggle" for="email" data-show="#contact-email-address" data-hide="#contact-mobile-number">
-              Yes
-            </label>
-          </div>
-          <div class="form-group">
-            <input type="radio" id="mobile" name="contact">
-            <label class="form-control-radio js-toggle" for="mobile" data-hide="#contact-email-address">
-              No
-            </label>
-          </div>
-        </div>
-
-        <div class="js-hidden panel-indent" id="contact-email-address">
-          <label class="form-label-bold" for="email-address">
-            Which rate do you receive?
-          </label>
-          <br>
-          <div class="form-group">
+        <div class="form-group">
             <input type="radio" id="low" name="contact">
             <label class="form-control-radio js-toggle" for="low" data-show="#contact-email-address" data-hide="#contact-mobile-number">
               Low rate
-            </label>
-          </div>
-          <div class="form-group">
-            <input type="radio" id="middle" name="contact">
-            <label class="form-control-radio js-toggle" for="middle" data-show="#contact-email-address" data-hide="#contact-mobile-number">
-              Middle rate
             </label>
           </div>
           <div class="form-group">
@@ -58,8 +32,6 @@
               High rate
             </label>
           </div>
-
-        </div>
       </fieldset>
     </div>
 
