fixed issues in routes

--- a/app/views/lis/3/you/benefits/aa.html
+++ b/app/views/lis/3/you/benefits/aa.html
@@ -12,7 +12,7 @@
   <div class="grid-row">
     <div class="column-two-thirds">
   <h1 class="heading-large">
-    Whitch rate of attendance allowance do you receive?
+    Which rate of attendance allowance do you receive?
   </h1>
 
   <!-- <p class="navigation"><a class="back-to-previous">Back</a></p> -->
