--- a/app/views/lis/3/you/benefits/benefit-sprint3.html
+++ b/app/views/lis/3/you/benefits/benefit-sprint3.html
@@ -61,6 +61,12 @@
          Maintenance payments
         </label>
       </div>
+      <div class="form-group">
+        <input type="checkbox" id="pip" value="pip" name="sprint3benefits">
+        <label class="form-control-checkbox" for="pip">
+         Personal independence payment
+        </label>
+      </div>
       <p class="form-block">or</p>
       <div class="form-group">
         <input type="checkbox" id="none" value="none" name="sprint3benefits">
