--- a/app/views/lis/3/you/benefits/pip-mobility-component.html
+++ b/app/views/lis/3/you/benefits/pip-mobility-component.html
@@ -12,23 +12,21 @@
   <div class="grid-row">
     <div class="column-two-thirds">
   <h1 class="heading-large">
-        Do you receive the mobility component of disability living allowance?
+    Does your personal independence payment include the mobility component?
   </h1>
 
-  <!-- <p class="navigation"><a class="back-to-previous">Back</a></p> -->
-      
-  <form action="dla-handler" method="get" class="form">
-<div class="form-item-wrapper">
+  <form action="" method="get" class="form">
+    <div class="form-item-wrapper">
       <fieldset>
         <div class="inline-form-groups">
           <div class="form-group">
-            <input type="radio" id="yes" name="dla">
+            <input type="radio" id="email" name="contact">
             <label class="form-control-radio js-toggle" for="email" data-show="#contact-email-address" data-hide="#contact-mobile-number">
               Yes
             </label>
           </div>
           <div class="form-group">
-            <input type="radio" id="no" name="dla-mobility">
+            <input type="radio" id="mobile" name="contact">
             <label class="form-control-radio js-toggle" for="mobile" data-hide="#contact-email-address">
               No
             </label>
@@ -41,24 +39,17 @@
           </label>
           <br>
           <div class="form-group">
-            <input type="radio" id="low" name="dla-mobility">
+            <input type="radio" id="low" name="contact">
             <label class="form-control-radio js-toggle" for="low" data-show="#contact-email-address" data-hide="#contact-mobile-number">
-              Low rate
+              Standard rate
             </label>
           </div>
           <div class="form-group">
-            <input type="radio" id="middle" name="dla-mobility">
+            <input type="radio" id="middle" name="contact">
             <label class="form-control-radio js-toggle" for="middle" data-show="#contact-email-address" data-hide="#contact-mobile-number">
-              Middle rate
+              Enhanced rate
             </label>
           </div>
-          <div class="form-group">
-            <input type="radio" id="high" name="dla-mobility">
-            <label class="form-control-radio js-toggle" for="high" data-show="#contact-email-address" data-hide="#contact-mobile-number">
-              High rate
-            </label>
-          </div>
-
         </div>
       </fieldset>
     </div>
@@ -66,6 +57,7 @@
     {{
       form_macros.button({
         label: 'Next',
+        href: 'benefit7' 
       })
     }}
     
