updated routes for partners benefits

--- a/app/views/lis/3/live/others/subtenant.html
+++ b/app/views/lis/3/live/others/subtenant.html
@@ -42,6 +42,7 @@
             label: 'Next'
           })
         }}
+        <!--note: tennants may take in borders or lodgers under some curcumstances-->
 
     <p class="navigation"><a class="cancel" href="../lis-home">Back to application home</a></p>
 
