--- a/app/views/lis/3/partner/pension/pension-credit.html
+++ b/app/views/lis/3/partner/pension/pension-credit.html
@@ -16,7 +16,7 @@
       Does your partner receive pension credit?
   </h1>
 
-  <form action="ppencred-handler" method="get" class="form">
+  <form action="pencred-handler" method="get" class="form">
     <div class="form-item-wrapper">
       <div class="form-group">
         <input type="radio" id="ib" name="prencred" value="ib">
