--- a/app/views/lis/3/partner/pension/pension-type.html
+++ b/app/views/lis/3/partner/pension/pension-type.html
@@ -17,7 +17,7 @@
   </h1>
   <p>Tick all that apply</p>
 
-  <form action="ppension-type-handler" method="get" class="form">
+  <form action="pension-type-handler" method="get" class="form">
 
     <div class="form-item-wrapper">
       <div class="form-group">
