--- a/app/views/lis/3/partner/pension/pension.html
+++ b/app/views/lis/3/partner/pension/pension.html
@@ -16,7 +16,7 @@
         Does your partner receive a pension?
       </h1>
   
-      <form action="ppension-handler" method="get" class="form">
+      <form action="pension-handler" method="get" class="form">
           <div class="form-item-wrapper">
             <fieldset>
               <div class="inline-form-groups">
