--- a/app/views/lis/3/partner/summary.html
+++ b/app/views/lis/3/partner/summary.html
@@ -19,7 +19,7 @@
 
     <table class="data-table you-summary">
       <td>Do you have a partner?</td>
-        <td>{{applicantPartner}}</td>
+        <td>Yes</td>
         <td><a href="partner">Change this</a></td>
       <tr>
         <td>Your partner's name</td>
