--- a/app/views/lis/3/partner/benefits/benefit-sprint3.html
+++ b/app/views/lis/3/partner/benefits/benefit-sprint3.html
@@ -17,7 +17,7 @@
   </h1>
   <p>Tick all that apply</p>
 
-  <form action="sprint3-partner-benefit-handler" method="get" class="form">
+  <form action="sprint3-benefit-handler" method="get" class="form">
     <div class="form-item-wrapper">
       <div class="form-group">
         <input type="checkbox" id="af" value="af" name="sprint3benefits">
