added routes for partner

--- a/app/views/lis/3/you/work.html
+++ b/app/views/lis/3/you/work.html
@@ -16,7 +16,7 @@
         Do you have a job?
       </h1>
   
-      <form action="" method="get" class="form">
+      <form action="work-handler" method="get" class="form">
           <div class="form-item-wrapper">
             <fieldset>
               <div class="inline-form-groups">
