--- a/app/views/lis/3/partner/benefits/benefit5.html
+++ b/app/views/lis/3/partner/benefits/benefit5.html
@@ -13,7 +13,7 @@
     <div class="column-two-thirds">
 
       <h1 class="heading-large">
-        Does someone other than your partner get carers allowance for looking after you? (HOW DO WE DEAL WITH THIS ONE?)
+        Does someone other than you get carers allowance for looking after your partner?
       </h1>
   
       <form action="" method="get" class="form">
