--- a/app/views/lis/3/partner/benefits/ctc.html
+++ b/app/views/lis/3/partner/benefits/ctc.html
@@ -13,10 +13,10 @@
     <div class="column-two-thirds">
 
   <h1 class="heading-large">
-    About your child tax credits
+    About your partner's child tax credits
   </h1>
   
-  <h2 class="heading-medium">How often do you receive your child tax credit payments?</h2>
+  <h2 class="heading-medium">How often does your partner receive child tax credit payments?</h2>
   
   <form action="ctc-handler" method="get" class="form">
 
