--- a/app/views/lis/3/assets/money.html
+++ b/app/views/lis/3/assets/money.html
@@ -26,7 +26,7 @@
         </label>
       </div>
       <div class="form-group">
-        <input type="checkbox" id="pb" name="banktype">
+        <input type="checkbox" id="pb" name="banktype" value="pb">
         <label class="form-control-checkbox" for="pb">
           Premium bonds
         </label>
