--- a/app/views/lis/3/account/create-account.html
+++ b/app/views/lis/3/account/create-account.html
@@ -35,7 +35,7 @@
         href: 'password'
       })
     }}
-    <p class="navigation"><a class="cancel" href="">I don't want to create an account</a></p>
+    <p class="navigation"><a class="cancel" href="../lis-home">I don't want to create an account</a></p>
     
   </form>
     </div>
