--- a/app/views/lis/3/lis-home-account.html
+++ b/app/views/lis/3/lis-home-account.html
@@ -13,7 +13,9 @@
     <div class="column-two-thirds">
 
       <div class="text">
-                
+        
+        <p>If you need to leave this service you can <a href=../3/account/create-account>create an account</a> to save your information.</p>
+        
         <h1 class="heading-xlarge">Low income scheme application</h1>
         
         <p class="lede">
@@ -44,6 +46,11 @@
           </p>
         </div>
   
+      <!--
+        <p>
+          <a class="button" href="declaration">Submit</a>
+        </p>
+     -->   
       </div>
       
     </div>
