--- a/app/views/lis/3/lis-home-email.html
+++ b/app/views/lis/3/lis-home-email.html
@@ -13,7 +13,9 @@
     <div class="column-two-thirds">
 
       <div class="text">
-                
+        
+        <p>Your email address vinay.mattu@inter.net has not been confirmed. <br><a href=#>Change this or send the link again</a></p>
+        
         <h1 class="heading-xlarge">Low income scheme application</h1>
         
         <p class="lede">
@@ -44,6 +46,11 @@
           </p>
         </div>
   
+      <!--
+        <p>
+          <a class="button" href="declaration">Submit</a>
+        </p>
+     -->   
       </div>
       
     </div>
