--- a/app/views/lis/3/lis-home2.html
+++ b/app/views/lis/3/lis-home2.html
@@ -14,7 +14,7 @@
 
       <div class="text">
         
-        <h1 class="heading-xlarge">My low income scheme application</h1>
+        <h1 class="heading-xlarge">Low income scheme application</h1>
         
         <p class="lede">
           Complete the following sections.
