--- a/app/views/sprint3.html
+++ b/app/views/sprint3.html
@@ -28,8 +28,9 @@
       <ul>
         <li><span class="strong">What we changed:</span> </li>
         <li>Partner questions have been added</li>
-        <li>Benefit types have been reduced to reflect those available to Mr &amp; Mrs Mattu, considering their ages</li>
-        <li>Specific questions about disability living allowance have been added</li>
+        <li>Benefit types have been reduced to reflect those available to Mr &amp; Mrs Mattu, considering their ages and situation</li>
+        <li>Specific questions about benefits have been added including combinations</li>
+        <li>a first pass at save and restore account functionality has been created</li>
       </ul>
   
       <ul>
