updated journey for account functionality

--- a/app/views/lis/3/start.html
+++ b/app/views/lis/3/start.html
@@ -52,8 +52,10 @@
         </ul>
         
         <p>
-          <a class="button button-get-started" href="ko">Start</a>
+          <a class="button button-get-started" href="ko">Start a new application</a>
         </p>
+        
+        <a href="signin">I've used this service before - view my application</a>
          
       </div>
       
