--- a/app/views/lis/3/lis-home.html
+++ b/app/views/lis/3/lis-home.html
@@ -13,7 +13,7 @@
     <div class="column-two-thirds">
 
       <div class="text">
-                
+                  
         <h1 class="heading-xlarge">Low income scheme application</h1>
         
         <p class="lede">
@@ -22,7 +22,7 @@
         <table class="data-table">
           <tr>
             <td>About you</td>
-            <td><a href="you/registration">Start</a></td>
+            <td><a href="you/care-home">Start</a></td>
           </tr>
           <tr>
             <td>About your partner</td>
