--- a/app/views/lis/3/register/contact.html
+++ b/app/views/lis/3/register/contact.html
@@ -42,10 +42,9 @@
     {{
       form_macros.button({
         href: 'contact-prefs',
-        label: 'Save and continue'
+        label: 'Next'
       })
     }}
-    <p class="navigation"><a class="cancel" href="../lis-home">Save and come back later</a></p>
   </form>
     </div>
     </div>
