--- a/app/views/lis/3/register/password.html
+++ b/app/views/lis/3/register/password.html
@@ -17,7 +17,8 @@
   </h1>
   <ul class="list list-bullet">
     <li class="lead-list">Your password must contain:</li>    
-    <li>at least 6 characters</li>    
+    <li>at least 8 characters</li>    
+    <li>at least one lowercase letter</li>    
     <li>at least one uppercase letter</li>    
     <li>at least one number or symbol</li>    
   </ul>
@@ -41,7 +42,7 @@
     {{
       form_macros.button({
         label: 'Next',
-        href: 'confirm-email'
+        href: '../lis-home'
       })
     }}
     
