--- a/app/views/lis/3/register/registration.html
+++ b/app/views/lis/3/register/registration.html
@@ -8,44 +8,46 @@
 {% block content %}
 
 <main id="content" role="main">
-  
+    
   <div class="grid-row">
     <div class="column-two-thirds">
 
-      <h1 class="heading-large">
-        Contact details
-      </h1>
-      <p>Please supply at least one of the following</p>
-  <form action="" method="get" class="form">
+  <!-- <p class="navigation"><a class="back-to-previous">Back</a></p> -->
+
+  <h1 class="heading-large">
+    Create an account
+  </h1>
+
+  <form action="registration-handler" method="get" class="form">
 
     {{
       form_macros.text_field({
-        id: 'email',
-        label: 'Email address'
+        id: 'firstname',
+        label: 'First name'
       })
     }}
-    
+
     {{
       form_macros.text_field({
-        id: 'telephone',
-        label: 'Landline telephone number'
+        id: 'lastname',
+        label: 'Last name'
       })
     }}
-    
+
     {{
-      form_macros.text_field({
-        id: 'mobile',
-        label: 'Mobile telephone number'
+      form_macros.date_field({
+        label: 'Date of birth',
+        hint_date: '31 7 1961',
+        id_prefix: 'dob-'
       })
     }}
 
     {{
       form_macros.button({
-        href: 'contact-prefs',
-        label: 'Save and continue'
+        label: 'Next',
+        href : 'contact'
       })
     }}
-    <p class="navigation"><a class="cancel" href="../lis-home">Save and come back later</a></p>
   </form>
     </div>
     </div>
