moved some kickouts to the section before the account creation

--- a/app/views/lis/3/lis-home.html
+++ b/app/views/lis/3/lis-home.html
@@ -22,7 +22,7 @@
         <table class="data-table">
           <tr>
             <td>About you</td>
-            <td><a href="you/care-home">Start</a></td>
+            <td><a href="you/work">Start</a></td>
           </tr>
           <tr>
             <td>About your partner</td>
@@ -34,7 +34,7 @@
           </tr>
           <tr>
             <td>About where you live</td>
-            <td><a href="live/home">Start</a></td>
+            <td><a href="live/hospital">Start</a></td>
           </tr>
         </table>
         
