--- a/app/views/lis/3/live/hospital.html
+++ b/app/views/lis/3/live/hospital.html
@@ -43,7 +43,7 @@
           })
         }}
 
-    <p class="navigation"><a class="cancel" href="../lis-home4">Save and come back later</a></p>
+    <p class="navigation"><a class="cancel" href="../lis-home">Save and come back later</a></p>
 
       </form>
       
