--- a/app/views/lis/3/register/registration.html
+++ b/app/views/lis/3/register/registration.html
@@ -15,7 +15,7 @@
   <!-- <p class="navigation"><a class="back-to-previous">Back</a></p> -->
 
   <h1 class="heading-large">
-    Create an account
+    Your details
   </h1>
 
   <form action="registration-handler" method="get" class="form">
