--- a/app/views/lis/3/savings.html
+++ b/app/views/lis/3/savings.html
@@ -13,9 +13,23 @@
     <div class="column-two-thirds">
 
   <h1 class="heading-large">
-    Are you living permanently in a care home?
+    Do you or your partner have more than £16,000?
   </h1>
-  
+  <p>Include savings, investments &amp; properties (but not place where you live)</p>  
+      <details>
+
+  <summary><span class="summary">What we mean by partner</span></summary>
+
+  <div class="panel panel-border-narrow">
+
+    <p>
+      We use the term partner to mean a person you live with as part of a couple of the same or opposite sex, whether or not you are married or in a civil partnership.
+    </p>
+
+  </div>
+
+</details>
+      <br>
   <form action="" method="get" class="form">
       <div class="form-item-wrapper">
         <fieldset>
@@ -36,14 +50,12 @@
         </fieldset>
       </div>
     
-        {{
+    {{
       form_macros.button({
-        href: 'hospital',
-        label: 'Save and continue'
+        href: 'register/need-to-know',
+        label: 'Next'
       })
     }}
-        
-    <p class="navigation"><a class="cancel" href="../lis-home4">Save and come back later</a></p>
 
   </form>
     </div>
