--- a/app/views/lis/3/care-home.html
+++ b/app/views/lis/3/care-home.html
@@ -16,19 +16,19 @@
     Are you living permanently in a care home?
   </h1>
   
-  <form action="" method="get" class="form">
+  <form action="care-home-handler" method="get" class="form">
       <div class="form-item-wrapper">
         <fieldset>
           <div class="inline-form-groups">
             <div class="form-group">
-              <input type="radio" id="binary-yes" name="binary">
-              <label class="form-control-radio" for="binary-yes">
+              <input type="radio" id="yes" name="carehome" value="yes">
+              <label class="form-control-radio" for="yes">
                 Yes
               </label>
             </div>
             <div class="form-group">
-              <input type="radio" id="binary-no" name="binary">
-              <label class="form-control-radio" for="binary-no">
+              <input type="radio" id="no" name="carehome" value="no">
+              <label class="form-control-radio" for="no">
                 No
               </label>
             </div>
@@ -38,7 +38,6 @@
     
     {{
       form_macros.button({
-        href: 'savings',
         label: 'Next'
       })
     }}
