--- a/app/views/lis/3/savings.html
+++ b/app/views/lis/3/savings.html
@@ -30,19 +30,19 @@
 
 </details>
       <br>
-  <form action="" method="get" class="form">
+  <form action="savings-kickout-handler" method="get" class="form">
       <div class="form-item-wrapper">
         <fieldset>
           <div class="inline-form-groups">
             <div class="form-group">
-              <input type="radio" id="binary-yes" name="binary">
-              <label class="form-control-radio" for="binary-yes">
+              <input type="radio" id="yes" name="savings" value="yes">
+              <label class="form-control-radio" for="yes">
                 Yes
               </label>
             </div>
             <div class="form-group">
-              <input type="radio" id="binary-no" name="binary">
-              <label class="form-control-radio" for="binary-no">
+              <input type="radio" id="no" name="savings" value="no">
+              <label class="form-control-radio" for="no">
                 No
               </label>
             </div>
@@ -52,7 +52,6 @@
     
     {{
       form_macros.button({
-        href: 'register/need-to-know',
         label: 'Next'
       })
     }}
