edited contact prefs

--- a/app/views/lis/3/lis-home4.html
+++ b/app/views/lis/3/lis-home4.html
@@ -39,7 +39,7 @@
           </tr>
           <tr>
             <td>About where you live</td>
-            <td><a href="live/home">Start</a></td>
+            <td><a href="live/hospital">Start</a></td>
           </tr>
         </table>
         
