--- a/app/views/lis/3/register/contact-prefs.html
+++ b/app/views/lis/3/register/contact-prefs.html
@@ -18,20 +18,20 @@
   <form action="" method="get" class="form">
 
     <div class="form-group">
-      <input type="radio" id="bank" name="banktype" value="bank">
-      <label class="form-control-radio minor-radio" for="bank">
+      <input type="radio" id="email" name="contact" value="email">
+      <label class="form-control-radio minor-radio" for="email">
         vinay.mattu@inter.net
       </label>
     </div>
     <div class="form-group">
-      <input type="radio" id="bank" name="banktype" value="bank">
-      <label class="form-control-radio minor-radio" for="bank">
+      <input type="radio" id="landline" name="contact" value="landline">
+      <label class="form-control-radio minor-radio" for="landline">
         0191 123 456
       </label>
     </div>
     <div class="form-group">
-      <input type="radio" id="bank" name="banktype" value="bank">
-      <label class="form-control-radio minor-radio" for="bank">
+      <input type="radio" id="mobile" name="contact" value="mobile">
+      <label class="form-control-radio minor-radio" for="mobile">
         07123 456 789
       </label>
     </div>
