--- a/app/views/lis/3/register/user-id.html
+++ b/app/views/lis/3/register/user-id.html
@@ -13,7 +13,7 @@
     <div class="column-two-thirds">
 
   <h1 class="heading-large">
-    Would you like to use your email address as your username?
+    Create a username
   </h1>
   
 
@@ -21,22 +21,10 @@
         <div class="form-item-wrapper">
           <fieldset>
               <div class="form-group">
-                <input type="radio" id="mobile" name="contact">
-                <label class="form-control-radio js-toggle" for="mobile" data-hide="#contact-email-address">
-                  Yes, use vinay.mattu@inter.net
-                </label>
-              </div>
-              <div class="form-group">
-                <input type="radio" id="email" name="contact">
-                <label class="form-control-radio js-toggle" for="email" data-show="#contact-email-address" data-hide="#contact-mobile-number">
-                  No, create a username
-                </label>
-              </div>
-
-            <div class="js-hidden panel-indent" id="contact-email-address">
                 <ul class="list list-bullet">
                   <li>Your username must not contain spaces</li>    
                   <li>You'll need this to sign in again so make it memorable</li>    
+                  <li>You can use your email address</li>    
                 </ul>
               
               <label class="form-label-bold" for="email-address">
