--- a/app/views/lis/3/lis-home.html
+++ b/app/views/lis/3/lis-home.html
@@ -22,7 +22,7 @@
         <table class="data-table">
           <tr>
             <td>About you</td>
-            <td><a href="you/work">Start</a></td>
+            <td><a href="you/registration">Start</a></td>
           </tr>
           <tr>
             <td>About your partner</td>
