--- a/app/views/lis/1/live/living-summary.html
+++ b/app/views/lis/1/live/living-summary.html
@@ -87,7 +87,7 @@
     </table>
     
     <p>
-      <a class="button" href="../lis-home-updated">Save - continue to my low income scheme home</a>
+      <a class="button" href="../lis-home-updated" id="next">Save - continue to my low income scheme home</a>
     </p>
 
   </div>
