--- a/app/views/lis/1/start.html
+++ b/app/views/lis/1/start.html
@@ -52,7 +52,7 @@
         </ul>
         
         <p>
-          <a class="button button-get-started" href="ko">Start</a>
+          <a class="button button-get-started" href="ko" id="next">Start</a>
         </p>
          
       </div>
