--- a/app/views/lis/2/kickout.html
+++ b/app/views/lis/2/kickout.html
@@ -28,7 +28,7 @@
         </ul>
         
         <p>
-          <a class="button" href="/">Exit this service</a>
+          <a class="button" href="/" id="next">Exit this service</a>
         </p>
 
       </div>
