--- a/app/views/lis/2/partner/summary.html
+++ b/app/views/lis/2/partner/summary.html
@@ -28,7 +28,7 @@
     </table>
     
     <p>
-      <a class="button" href="../lis-home3">Save and continue</a>
+      <a class="button" href="../lis-home3" id="next">Save and continue</a>
     </p>
 
   </div>
