--- a/app/views/lis/3/carehome-kickout.html
+++ b/app/views/lis/3/carehome-kickout.html
@@ -17,7 +17,7 @@
         <h1 class="heading-xlarge">Carehome</h1>
         
         <p>
-          <a class="button" href="/">Exit this service</a>
+          <a class="button" href="/" id="next">Exit this service</a>
         </p>
 
       </div>
