--- a/app/views/lis/3/start.html
+++ b/app/views/lis/3/start.html
@@ -52,7 +52,7 @@
         </ul>
         
         <p>
-          <a class="button button-get-started" href="ko">Start a new application</a>
+          <a class="button button-get-started" href="ko" id="next">Start a new application</a>
         </p>
         
         <a href="signin">I've used this service before - view my application</a>
