--- a/app/views/lis/3/you/about-you-summary.html
+++ b/app/views/lis/3/you/about-you-summary.html
@@ -87,7 +87,7 @@
     </table>
     
     <p>
-      <a class="button" href="../lis-home2">Save and continue</a>
+      <a class="button" href="../lis-home2" id="next">Save and continue</a>
     </p>
 
   </div>
