--- a/app/views/lis/1/declaration.html
+++ b/app/views/lis/1/declaration.html
@@ -26,7 +26,7 @@
         </div>
         <br>
         <p>
-          <a class="button" href="full-help">Agree and submit my application</a>
+          <a class="button" href="full-help" id="next">Agree and submit my application</a>
         </p>
          
       </div>
