--- a/app/views/lis/1/ko.html
+++ b/app/views/lis/1/ko.html
@@ -51,7 +51,7 @@
       </div>
     {{
       form_macros.button({
-        label: 'Next'
+        label: 'Next',
       })  
     }}
           </div>
