--- a/app/views/lis/3/assets/assets-summary.html
+++ b/app/views/lis/3/assets/assets-summary.html
@@ -72,7 +72,7 @@
     </table>
     
    <p>
-      <a class="button" href="../lis-home4">Save and continue</a>
+      <a class="button" href="../lis-home4" id="next">Save and continue</a>
     </p>
 
   </div>
