--- a/app/views/lis/3/lis-home-updated.html
+++ b/app/views/lis/3/lis-home-updated.html
@@ -44,7 +44,7 @@
         </table>
         
         <p>
-          <a class="button" href="declaration">Next</a>
+          <a class="button" href="declaration" id="next">Next</a>
         </p>
       </div>
       
