--- a/app/views/lis/3/partner/summary.html
+++ b/app/views/lis/3/partner/summary.html
@@ -94,7 +94,7 @@
     </table>
     
     <p>
-      <a class="button" href="../lis-home3">Save and continue</a>
+      <a class="button" href="../lis-home3" id="next">Save and continue</a>
     </p>
 
   </div>
