--- a/app/views/lis/3/need-to-know.html
+++ b/app/views/lis/3/need-to-know.html
@@ -39,7 +39,7 @@
     {{
       form_macros.button({
         label: 'Next',
-        href: 'user-id'
+        href: 'register/user-id'
       })
     }}
     
