--- a/app/views/sprint3.html
+++ b/app/views/sprint3.html
@@ -31,7 +31,7 @@
         <li>Benefit types have been reduced to reflect those available to Mr &amp; Mrs Mattu, considering their ages and situation</li>
         <li>Added functionality to allow users to tell us they have Premium Bonds, and the value of them</li>
         <li>Specific questions about benefits have been added including combinations</li>
-        <li>a first pass at save and restore account functionality has been created</li>
+        <li>A first pass at save and restore account functionality has been created</li>
       </ul>
   
       <ul>
