adding every four weeks to frequency questions

--- a/app/views/lis/3/live/others/amount.html
+++ b/app/views/lis/3/live/others/amount.html
@@ -25,19 +25,25 @@
       <div class="form-group">
         <input type="radio" id="week" name="minor">
         <label class="form-control-radio" for="week">
-          Weekly
+          Every week
         </label>
       </div>
       <div class="form-group">
         <input type="radio" id="fortnight" name="minor">
         <label class="form-control-radio" for="fortnight">
-          Fortnightly
+          Every two weeks
+        </label>
+      </div>
+      <div class="form-group">
+        <input type="radio" id="fourweekly" name="minor">
+        <label class="form-control-radio" for="fourweekly">
+          Every four weeks
         </label>
       </div>
       <div class="form-group">
         <input type="radio" id="month" name="minor">
         <label class="form-control-radio" for="month">
-         Monthly
+         Every month
         </label>
       </div>
       <div class="form-group">
