--- a/app/views/lis/3/you/pay.html
+++ b/app/views/lis/3/you/pay.html
@@ -34,8 +34,8 @@
         </label>
       </div>
       <div class="form-group">
-        <input type="radio" id="four-week" name="frequency">
-        <label class="form-control-radio" for="four-week">
+        <input type="radio" id="fourweekly" name="frequency">
+        <label class="form-control-radio" for="fourweekly">
          Every four weeks
         </label>
       </div>
