--- a/app/views/lis/3/you/pension/private-pension-amount.html
+++ b/app/views/lis/3/you/pension/private-pension-amount.html
@@ -34,6 +34,12 @@
         </label>
       </div>
       <div class="form-group">
+        <input type="radio" id="fourweekly" name="minor">
+        <label class="form-control-radio" for="fourweekly">
+          Four weekly
+        </label>
+      </div>
+      <div class="form-group">
         <input type="radio" id="month" name="minor">
         <label class="form-control-radio" for="month">
          Monthly
