--- a/app/views/lis/3/partner/benefits/ctc.html
+++ b/app/views/lis/3/partner/benefits/ctc.html
@@ -24,7 +24,7 @@
       <div class="form-group">
         <input type="radio" id="week" name="ctc">
         <label class="form-control-radio" for="week">
-          Weekly
+          Every week
         </label>
       </div>
       <div class="form-group">
