edited routes so that if a user has a partner the savings and assets questions change accordingly

--- a/app/views/lis/3/assets/money.html
+++ b/app/views/lis/3/assets/money.html
@@ -13,7 +13,7 @@
     <div class="column-two-thirds">
 
       <h1 class="heading-large">
-        Do you have any of the following in this country or abroad?
+        Do {{partnerortext}} have any of the following in this country or abroad?
         <span class="form-hint">Tick all that apply</span>
       </h1>
       
@@ -32,38 +32,38 @@
         </label>
       </div>
       <div class="form-group">
-        <input type="checkbox" id="cp" name="banktype">
+        <input type="checkbox" id="cp" value="cp" name="banktype">
         <label class="form-control-checkbox" for="cp">
           Capital bonds
         </label>
       </div>
       <div class="form-group">
-        <input type="checkbox" id="sh" name="banktype">
+        <input type="checkbox" id="sh" value="sh" name="banktype">
         <label class="form-control-checkbox" for="sh">
           Shares
         </label>
       </div>
       <div class="form-group">
-        <input type="checkbox" id="nsc" name="banktype">
+        <input type="checkbox" id="nsc" value="nsc" name="banktype">
         <label class="form-control-checkbox" for="nsc">
           National Saving Certificates
         </label>
       </div>
       <div class="form-group">
-        <input type="checkbox" id="ut" name="banktype">
+        <input type="checkbox" id="ut" value="ut" name="banktype">
         <label class="form-control-checkbox" for="ut">
         Unit trusts
         </label>
       </div>
       <div class="form-group">
-        <input type="checkbox" id="isa" name="banktype">
+        <input type="checkbox" id="isa" value="isa" name="banktype">
         <label class="form-control-checkbox" for="isa">
           Any other investments
         </label>
       </div>
       <p class="form-block">or</p>
       <div class="form-group">
-        <input type="checkbox" id="none" name="banktype">
+        <input type="checkbox" id="none" value="none" name="banktype">
         <label class="form-control-checkbox" for="none">
           I don't have any of these
         </label>
