--- a/app/views/lis/3/assets/other.html
+++ b/app/views/lis/3/assets/other.html
@@ -15,7 +15,7 @@
   <!-- <p class="navigation"><a class="back-to-previous">Back</a></p> -->
 
   <h1 class="heading-large">
-    Do you have any other money?
+    Do {{partnerortext}} have any other money?
     <span class="form-hint">For example cash</span>
   </h1>
 
