added route for tothers work

--- a/app/views/lis/4/live/others/education.html
+++ b/app/views/lis/4/live/others/education.html
@@ -39,7 +39,7 @@
 
           {{
             form_macros.button({
-              href: 'benefits',
+              href: 'work',
               label: 'Save and continue'
             })
           }}
