--- a/app/views/lis/4/live/others/amount.html
+++ b/app/views/lis/4/live/others/amount.html
@@ -65,7 +65,7 @@
     
     {{
       form_macros.button({
-        href: 'education',
+        href: 'benefits',
         label: 'Save and continue'
       })
     }}
