--- a/app/assets/sass/nhs_application.scss
+++ b/app/assets/sass/nhs_application.scss
@@ -210,7 +210,6 @@ p.intro-to-list {
   font-weight: bold;
 }
 
-
 //done-page
 
 .done-panel {
@@ -254,6 +253,63 @@ hr {
   }
   li:nth-child(1) {
     list-style: disc;
+    padding-left: 0px;
+    list-style-position: inside;
+  }
+  .large, .cost {
+    font-size: 24px;
+    clear: both;
+  }
+  .cost {
+    margin-bottom: 5px;
+  }
+}
+
+.lead-list:first-child {
+  list-style: none;
+  margin-left: -1.5rem;
+}
+
+#global-header a.header-logo {
+    float: left;
+}
+
+
+//exemption-page
+
+.exemption-header {
+  background-color: $nhs-blue;
+  color: white;
+  padding: 10px;
+  margin: 10px 0 30px;
+  h1 {
+    padding-top: 0;
+    margin-bottom: 10px;
+  }
+  h4 {
+    padding-top: 0;
+  }
+  h2 {
+    padding-top: 0;
+  }
+}
+
+.certcode {
+  font-size: 3.6rem;
+}
+
+hr {
+    padding-bottom: 1rem;
+    padding-top: 2rem;
+}
+
+.cert-description {
+  li {
+    padding-left: 15px;
+    list-style-position: inside;
+  }
+  li:nth-child(1) {
+    list-style: none;
     padding-left: 0px;
     list-style-position: inside;
   }
