--- a/app/views/lis/exemption/certificate.html
+++ b/app/views/lis/exemption/certificate.html
@@ -14,35 +14,35 @@
     <p>Valid until: <strong>31 May 2017</strong></p>
 
   <h2 class="heading-medium">Your entitlement</h2>
-
-  <ul class="cert-description">
-    <li class="medium strong">Prescriptions</li>
+  <div class="ex-div">
+  <ul class="cert-des">
+    <li class="medium strong ex-type">Prescriptions</li>
     <li>You are <strong>not</strong> entitled to free NHS prescriptions</li>
   </ul>
-  <ul class="cert-description">
-    <li class="medium strong">Sight tests</li>
-    <li>you pay a maximum of:</li>
+  <hr>
+  <ul class="cert-des">
+    <li class="medium strong ex-type">Sight tests</li>
+    <li>You pay a maximum of:</li>
     <li class="cost">£5</li>
   </ul>
-  <ul class="cert-description">
-    <li class="medium strong">Glasses or contact lenses</li>
-    <li>you pay: </li>
+  <hr>
+  <ul class="cert-des">
+    <li class="medium strong ex-type">Glasses or contact lenses</li>
+    <li>Towards an optical voucher, you pay: </li>
     <li class="cost">£10</li> 
-    <li>
-      towards an optical voucher
-    </li>
   </ul>
-  <ul class="cert-description">
-    <li class="medium strong">Travel to receive NHS treatment</li>
-    <li>you pay: </li>
+  <hr>
+  <ul class="cert-des">
+    <li class="medium strong ex-type">Travel to receive NHS treatment</li>
+    <li>In any one week, you pay: </li>
     <li class="cost">£5</li> 
-    <li>in any one week</li>
   </ul>
-  <ul class="cert-description">
-    <li class="medium strong">NHS dental treatment, wigs, or fabric supports</li>
-    <li>you pay a maximum of:</li>
+  <hr>
+  <ul class="cert-des">
+    <li class="medium strong ex-type">NHS dental treatment, wigs, or fabric supports</li>
+    <li>Per course of treatment or prescribed item, you pay a maximum of:</li>
     <li class="cost">£15</li> 
-    <li>per course of treatment or prescribed item</li>
-  </ul> 
+  </ul>
+  </div>
 </main>
 
