--- a/public/stylesheets/nhs_application.css
+++ b/public/stylesheets/nhs_application.css
@@ -2041,18 +2041,29 @@ hr {
   padding-bottom: 1rem;
   padding-top: 2rem; }
 
-.cert-description li {
-  padding-left: 15px;
-  list-style-position: inside; }
-.cert-description li:nth-child(1) {
+.ex-div {
+  width: device-width; }
+
+.cert-des li {
+  list-style-position: inside;
+  display: inline-block; }
+.cert-des li:nth-child(1) {
   list-style: none;
   padding-left: 0px;
   list-style-position: inside; }
-.cert-description .large, .cert-description .cost {
+.cert-des .large, .cert-des .cost {
   font-size: 24px;
   clear: both; }
-.cert-description .cost {
-  margin-bottom: 5px; }
+.cert-des .cost {
+  margin-bottom: 5px;
+  float: right;
+  display: inline-block;
+  width: 20%;
+  text-align: center;
+  font-size: 3rem;
+  font-weight: bold; }
+.cert-des .ex-type {
+  display: block; }
 
 .lead-list:first-child {
   list-style: none;
